--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#" id='home'>Home</a>
+            <a class="nav-item nav-link" href="docs.html" id='home'>Dokumentasi</a>
             <a class="nav-item nav-link" href="#" id='update_account'>Account</a>
             <a class="nav-item nav-link" href="#" id='logout'>Logout</a>
             <a class="nav-item nav-link" href="#" id='login'>Login</a>
@@ -58,6 +58,7 @@
 <script>
 // jQuery codes
 $(document).ready(function(){
+    showHomePage();
     // show sign up / registration form
     $(document).on('click', '#sign_up', function(){
  
@@ -372,6 +373,7 @@ $(document).ready(function(){
                 <div class="card">
                     <div class="card-header">Welcome to API Harga Eceran</div>
                     <div class="card-body">
+                        Untuk dapat mengakses API maka pengguna harus melakukan register pada menu Register
                     </div>
                 </div>
                 `;
